--- a/Client/src/app/admin/admin.component.html
+++ b/Client/src/app/admin/admin.component.html
@@ -1,10 +1,7 @@
 <app-role-navbar></app-role-navbar>
-<div class="row admin-container">
-  <div class="col-3">
-    <app-admin-sidebar></app-admin-sidebar>
-  </div>
-  <div class="col">
-    <router-outlet></router-outlet>
-  </div>
-</div>
 
+<app-admin-sidebar></app-admin-sidebar>
+
+<main class="app-content">
+  <router-outlet></router-outlet>
+</main>
