--- a/Client/src/app/components/role-navbar/role-navbar.component.css
+++ b/Client/src/app/components/role-navbar/role-navbar.component.css
@@ -10,6 +10,13 @@
   border-bottom-right-radius: 20px;
   animation: fadeDown 0.6s ease-in-out;
 }
+.navbar-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 24px;
+  width: 100%;
+}
 
 /* Navbar Brand Style */
 .navbar-brand {
