--- a/Client/src/app/components/role-navbar/role-navbar.component.html
+++ b/Client/src/app/components/role-navbar/role-navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg custom-navbar p-3 px-4">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg custom-navbar">
+  <div class="navbar-inner">
     <a class="navbar-brand fw-bold fst-italic text-white fs-4" (click)="navigateToDashboard()" style="cursor: pointer;">
       Abacus Learning System
     </a>
