--- a/Client/src/app/admin/admin.component.html
+++ b/Client/src/app/admin/admin.component.html
@@ -1,7 +1,9 @@
 <app-role-navbar></app-role-navbar>
 
-<app-admin-sidebar></app-admin-sidebar>
+<div class="admin-layout">
+  <app-admin-sidebar></app-admin-sidebar>
 
-<main class="app-content">
-  <router-outlet></router-outlet>
-</main>
+  <main class="app-content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
