--- a/Client/src/app/admin/admin.component.css
+++ b/Client/src/app/admin/admin.component.css
@@ -1,33 +1,34 @@
-:root {
-  --navbar-height: 75px;
-  --sidebar-width: 250px;
+.admin-layout {
+  display: flex;
+  margin-top: var(--navbar-height);
+  min-height: calc(100vh - (var(--navbar-height) + 45px));
 }
 
-/* LAYOUT CONTROLS SIDEBAR POSITION */
+/* Sidebar */
 app-admin-sidebar {
-  position: fixed;
-  top: var(--navbar-height);
-  left: 0;
   width: var(--sidebar-width);
-  height: calc(100vh - var(--navbar-height));
-  z-index: 900;
+  flex-shrink: 0;
+  position: sticky;
+  top: calc(var(--navbar-height) + 45px);
+  height: 100vh;
 }
 
-/* Make sure the sidebar element fills its host */
+/* Sidebar inner */
 app-admin-sidebar .sidebar {
   height: 100%;
 }
 
-
 /* Main content */
 .app-content {
-  margin-left: var(--sidebar-width);
-  margin-top: var(--navbar-height);
+  flex: 1;
   padding: 24px;
   background: #fafbff;
-  min-height: calc(100vh - var(--navbar-height));
 }
 @media (max-width: 991.98px) {
+  .admin-layout {
+    flex-direction: column;
+  }
+
   app-admin-sidebar {
     position: relative;
     width: 100%;
@@ -37,6 +38,5 @@ app-admin-sidebar .sidebar {
 
   .app-content {
     margin-left: 0;
-    margin-top: var(--navbar-height);
   }
 }
