--- a/Client/src/app/student/student.component.html
+++ b/Client/src/app/student/student.component.html
@@ -1,10 +1,9 @@
 <app-role-navbar></app-role-navbar>
-<div class="row student-container">
-  <div class="col-3">
-    <app-student-sidebar></app-student-sidebar>
-  </div>
-  <div class="col me-5">
-    <router-outlet></router-outlet>
-  </div>
-</div>
 
+<div class="admin-layout">
+  <app-student-sidebar></app-student-sidebar>
+
+  <main class="app-content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
