--- a/Client/src/app/teacher/teacher.component.css
+++ b/Client/src/app/teacher/teacher.component.css
@@ -1,38 +1,44 @@
-.teacher-container {
-  min-height: 100vh;
-  background: white;
-  margin-top: 75px;
-  padding: 0;
+.admin-layout {
+  display: flex;
+  margin-top: var(--navbar-height);
+  min-height: calc(100vh - (var(--navbar-height) + 45px));
 }
 
-.teacher-container .row {
-  margin: 0;
+/* Sidebar */
+app-teacher-sidebar {
+  width: var(--sidebar-width);
+  flex-shrink: 0;
+  position: fixed;
+  left: 0;
+  top: calc(var(--navbar-height) + 45px);
+  height: calc(100vh - (var(--navbar-height) + 45px));
 }
 
-.teacher-container .col-3 {
-  padding-right: 0;
-  width: 250px;
+/* Sidebar inner */
+app-teacher-sidebar .sidebar {
+  height: 100%;
 }
 
-.teacher-container .col {
-  padding-left: 0;
-  margin-left: 250px;
-  padding-top: 20px;
-  padding-right: 20px;
+/* Main content */
+.app-content {
+  flex: 1;
+  padding: 24px;
+  margin-left: var(--sidebar-width);
+  background: #fafbff;
 }
-
 @media (max-width: 991.98px) {
-  .teacher-container {
-    margin-top: 0;
+  .admin-layout {
+    flex-direction: column;
   }
 
-  .teacher-container .col-3 {
+  app-student-sidebar {
+    position: relative;
     width: 100%;
+    height: auto;
+    top: 0;
   }
 
-  .teacher-container .col {
+  .app-content {
     margin-left: 0;
-    width: 100%;
-    padding-top: 10px;
   }
 }
