--- a/Client/src/app/teacher/teacher.component.html
+++ b/Client/src/app/teacher/teacher.component.html
@@ -1,10 +1,9 @@
 <app-role-navbar></app-role-navbar>
-<div class="row teacher-container">
-  <div class="col-3">
-    <app-teacher-sidebar></app-teacher-sidebar>
-  </div>
-  <div class="col me-5">
-    <router-outlet></router-outlet>
-  </div>
-</div>
 
+<div class="admin-layout">
+  <app-teacher-sidebar></app-teacher-sidebar>
+
+  <main class="app-content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
